--- a/templates/register.html
+++ b/templates/register.html
@@ -58,7 +58,19 @@
                             {{ form.confirmpassword(class="form-control form-control-lg") }}
                         {% endif %}
                     </div>
-                 
+                    <div class="form-group">
+                        {{ form.uploadImage.label(class="form-control-label")}}
+                        {% if form.uploadImage.errors %}
+                            {{ form.uploadImage(class="is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.uploadImage.errors %}    
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.uploadImage(class="") }}
+                        {% endif %}
+                    </div> 
                 </fieldset>
                 <div class="form-group">
                     {{ form.submitField(class="btn btn-outline-primary") }}
