--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="container">
         <div class="col-4">
-            <form method="POST" action="">
+            <form method="POST" action="" enctype=multipart/form-data>
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
                     <h1 class="display3 border-bottom pb-2">Register</h1>
