--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,12 @@
     margin: 0;
 }
 
+body {
+    height: 100%;
+    width: 100%;
+    overflow: visible;
+}
+
 .navbar-bg {
     background-color: #121324;
 }
@@ -17,14 +23,65 @@
     
 }
 
+.custom-toggler {
+    border-color: #ffffff;
+}
+
+.custom-toggler .navbar-toggler-icon {
+    color: #ffffff;
+}
+
 .forum-page {
-    height: 90vh;
+    height: 100%;
     margin: 0;
     padding: 0;
+    text-align: left;
 }
 
 .user-area {
-    height: 100vh;
+    height: 100%;
+    width: auto;
+    min-width: 210px;
+    background-image: url(../img/forum-bg.jpg);
+    background-size: cover;
+}
+
+.image-container {
+    width: 120px;
+    height: 120px;
+}
+
+.image-container img {
     width: 100%;
-    background-color:aqua;
+    height: 100%;
+}
+
+.account-heading a{
+    color: #ffffff;
+}
+
+
+.forum-body {
+    height: 100px;
+}
+
+.forum-intro {
+    color: #FF0368;
+}
+
+.btn-custom {
+    color: #ffffff;
+    background-color: #FF0368;
+    transition: .5s;
+}
+
+.btn-custom:hover {
+    color: #FF0368;
+    background-color: #ffffff;
+    border: 1px solid #FF0368;
+}
+
+.forum-list {
+    height: 55%;
+    overflow-y: scroll;
 }
