--- a/templates/account.html
+++ b/templates/account.html
@@ -5,7 +5,7 @@
             <form method="POST" action="" enctype=multipart/form-data>
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
-                    <h1 class="display3 border-bottom pb-2">Register</h1>
+                    <h1 class="display3 border-bottom pb-2">User Account</h1>
                     <div class="form-group">
                         {{ form.userID.label(class="form-control-label") }}
                         {% if form.userID.errors %}
