forum, index, data
- backend implementation for forum
- added index to handle message retrieve by datetime
- modification in data.py
- added requirement.txt
- added 404 page
- forum page completed ( images except)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,3 +85,13 @@ body {
     height: 55%;
     overflow-y: scroll;
 }
+
+.user-post-image {
+    height: 40px;
+    width: 40px;
+}
+
+.user-post-image img {
+    height: 100%;
+    width: 100%; 
+}
