--- a/templates/account.html
+++ b/templates/account.html
@@ -1,84 +1,92 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="container">
-        <div class="col-4">
-            <form method="POST" action="" enctype=multipart/form-data>
-                {{ form.hidden_tag() }}
-                <fieldset class="form-group">
-                    <h1 class="display3 border-bottom pb-2">User Account</h1>
+        <h1 class="display3 border-bottom pb-2">User Account</h1>
+        <div class="row">
+            <!-- password edit area -->
+            <div class="password-area col-4">
+                <form method="POST" action="" enctype=multipart/form-data>
+                    {{ form.hidden_tag() }}
+                    <fieldset class="form-group">
+                        <div class="form-group">
+                            <label class="form-control-label">UserID:</label>
+                            <input class="form-control form-control-lg" placeholder="{{ user }}" disabled/>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label">User Name:</label>
+                            <input class="form-control form-control-lg" placeholder="{{ username }}" disabled/>
+                        </div>
+                        <div class="form-group">
+                            {{ form.oldpassword.label(class="form-control-label") }}
+                            {% if form.oldpassword.errors %}
+                                {{ form.oldpassword(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.oldpassword.errors %}    
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.oldpassword(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.newpassword.label(class="form-control-label") }}
+                            {% if form.newpassword.errors %}
+                                {{ form.newpassword(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.newpassword.errors %}    
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.newpassword(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.confirmpassword.label(class="form-control-label") }}
+                            {% if form.confirmpassword.errors %}
+                                {{ form.confirmpassword(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.confirmpassword.errors %}    
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.confirmpassword(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        
+                    </fieldset>
                     <div class="form-group">
-                        {{ form.userID.label(class="form-control-label") }}
-                        {% if form.userID.errors %}
-                            {{ form.userID(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.userID.errors %}    
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.userID(class="form-control form-control-lg") }}
-                        {% endif %}
+                        {{ form.submitField(class="btn btn-outline-primary") }}
                     </div>
-                    <div class="form-group">
-                        {{ form.username.label(class="form-control-label") }}
-                        {% if form.username.errors %}
-                            {{ form.username(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.username.errors %}    
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.username(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.password.label(class="form-control-label") }}
-                        {% if form.password.errors %}
-                            {{ form.password(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.password.errors %}    
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.password(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.confirmpassword.label(class="form-control-label") }}
-                        {% if form.confirmpassword.errors %}
-                            {{ form.confirmpassword(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.confirmpassword.errors %}    
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.confirmpassword(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="input-group pt-3">
-                        {% if form.uploadImage.errors %}
-                            {{ form.uploadImage(class="is-invalid custom-file-input", id="inputGroupFile01") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.uploadImage.errors %}    
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.uploadImage(class="custom-file-input", id="inputGroupFile01") }}
-                        {% endif %}
-                        {{ form.uploadImage.label(class="custom-file-label", id="inputGroupFile01")}}
-                    </div> 
-                </fieldset>
-                <div class="form-group">
-                    {{ form.submitField(class="btn btn-outline-primary") }}
-                </div>
-            </form>
-           <div class="mt-4">
-               <p>Already have an account? <a href="/login">Login</a></p>
-           </div> 
+                </form>
+            </div>
+            
+            <!-- end of password edit area -->
+
+            <!-- Post Edit Area -->
+            <div class="post-area col-8">
+                <form method="POST" enctype=multipart/form-data>
+                    {{ form.hidden_tag() }}
+                    <fieldset class="form-group">
+                        <div class="form-group">
+                            {{ form.changesubject.label(class="form-control-label") }}
+                            {% if form.changesubject.errors %}
+                                {{ form.changesubject(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.changesubject.errors %}    
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.changesubject(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
         </div>
+        
     </div>
 {% endblock content %}
