--- a/templates/forum.html
+++ b/templates/forum.html
@@ -65,7 +65,7 @@
                         </div> 
                     </fieldset>
                     <div class="form-group">
-                        {{ form.submitField(class="btn btn-custom") }}
+                        {{ form.messageSubmit(class="btn btn-custom") }}
                     </div>
                 </form>
             </div>
