--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,11 @@
 body {
     height: 100%;
     width: 100%;
-    overflow: visible;
+    overflow: hidden;
+}
+
+nav {
+    height: auto;
 }
 
 .navbar-bg {
@@ -31,6 +35,12 @@ body {
     color: #ffffff;
 }
 
+/* content overall */
+.content {
+    height: 100%;
+}
+
+/* forum html */
 .forum-page {
     height: 100%;
     margin: 0;
@@ -60,7 +70,6 @@ body {
     color: #ffffff;
 }
 
-
 .forum-body {
     height: 100px;
 }
@@ -82,7 +91,7 @@ body {
 }
 
 .forum-list {
-    height: 55%;
+    height: 30%;
     overflow-y: scroll;
 }
 
@@ -94,4 +103,11 @@ body {
 .user-post-image img {
     height: 100%;
     width: 100%; 
+}
+
+/* user.html */
+.user-page {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
