--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
     </div> 
     
     <!-- content -->
-    <div class="container">
+    <div class="container content">
         {% block content %} {% endblock content%}
     </div>
     
